6.2.7 (ws)
      - fix: removal of unecessary KeySigs after insertion of new
        KeySig incl. undo/redo
5.2.7 (ws)
      - fix KeySig undo/redo
      - added "Close" action
      - fixed crash when loading a score with previously edited slur
        (which now contains a SlurSegment element)
      - updated template files
4.2.7 (ws)
      - fix crash when pressing escape while editing title
      - fix crash when clicking outside text while editing
      - printing fixes
3.2.7 (lv)
      * MusicXML updates
      - added tuplet export
      - fixed crash when writing single-staff part
2.2.7 (ws)
      - close all open top level windows on app exit
      - fix kb note entry for staff != 0
      - tuplets: implement undo/redo
      - add beam functions to pad
      - move KeyList from Score() to Staff() allowing for different key
        signatures for different staffs
1.2.7  (ws)
      - fix crash after editing slur
      - fix page number position
31.1.7 (lv)
      - fixed MusicXML export of dynamics
      (ws)
      - fix printing instrument names
      - fixed insert instrument - undo - redo
      - fixed missing bar lines when inserting another piano staff
28.1.7 (ws)
      - implement global Cut/Copy/Paste
      - implement Element drag (drag element with middle mouse key)
27.1.7 (ws)
      - implemented some cut/copy/paste functionality
      - try to handle accidentals in addition to key signatures
      (lv)
      - MusicXML export of TempoText
      - MusicXML export of composite TimeSigs and of TSIG_ALLA_BREVE and TSIG_FOUR_FOUR
25.1.7 (ws)
      - ask for save when double click on tab of a modified score to remove
        score from tab-list
      - ask for save for all modified scores on exit
      - midi export: fix export of meta strings like subtitle etc.
      - implement program start options selectable in preferences:
        start with last score, start with empty score and start with defined score
24.1.7 (ws)