@@ -407,7 +407,6 @@ class Score : public QObject {
       void setSaved(bool v) { _saved = v; }
       bool playlistDirty();
       void changeTimeSig(int tick, int st);
-      void changeClef(int tick, int si, int idx);
 
       void cmd(const QString&);
       Element* editElement() const { return editObject; }
